@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.28 ===
+* Added 'listen' playback mode for the sampler in dspu::Sampler.
 * Added support of build for MacOS.
 
 === 1.0.27 ===
